Add keycloak json auth handler option (#72)
* Add keycloak json auth handler option (in addition to the existing form request one)

* remove raw IOU routes (deliberately left Raw class for reference)
