# base/src/test/resources/test-openapi.yml
@@ -87,31 +87,6 @@ components:
         - error
         - error_description
 
-    iou:
-      description: IOU data
-      type: object
-      properties:
-        iou:
-          type: object
-          properties:
-            id:
-              type: string
-              format: uuid
-            payee:
-              type: string
-            issuer:
-              type: string
-            amount:
-              type: number
-              format: double
-          required:
-            - id
-            - payee
-            - issuer
-            - amount
-      required:
-        - iou
-
   responses:
     oauth400:
       description: The oAuth request was invalid
@@ -173,42 +148,6 @@ components:
           schema:
             type: string
             example: OutOfMemory
-    amount200:
-      description: the amount remaining to be paid off
-      content:
-        application/json:
-          schema:
-            properties:
-              amount:
-                type: number
-                format: double
-            required:
-              - amount
-
-  parameters:
-    iouId:
-      name: iouId
-      in: path
-      description: the system id of an IOU
-      required: true
-      schema:
-        type: string
-        format: uuid
-    amount:
-      name: amount
-      in: path
-      description: the amount remaining to be paid off
-      required: true
-      schema:
-        type: number
-        format: double
-    payee:
-      name: payee
-      in: path
-      description: the person the IOU is made out to
-      required: true
-      schema:
-        type: string
 
 security:
   - auth: [ ]
@@ -317,191 +256,3 @@ paths:
                   example: "verylong.refresh.token"
               required:
                 - refresh_token
-
-  /raw/iou/{amount}/{payee}:
-    post:
-      summary: create a new IOU to pay the named payee
-      operationId: createIouRaw
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/amount'
-        - $ref: '#/components/parameters/payee'
-      responses:
-        201:
-          description: The IOU is successfully created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/iou'
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
-
-  /raw/iou/{iouId}/amountOwed:
-    get:
-      summary: get the amount owed
-      operationId: getAmountOwedRaw
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/iouId'
-      responses:
-        200:
-          $ref: '#/components/responses/amount200'
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
-
-  /raw/iou/{iouId}/pay/{amount}:
-    patch:
-      summary: pay an amount off
-      operationId: payRaw
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/iouId'
-        - $ref: '#/components/parameters/amount'
-      responses:
-        200:
-          $ref: '#/components/responses/amount200'
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
-
-  /raw/iou/{iouId}/forgive:
-    put:
-      summary: forgive the whole debt
-      operationId: forgiveRaw
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/iouId'
-      responses:
-        204:
-          description: debt forgiven
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
-
-  /gen/iou/{amount}/{payee}:
-    post:
-      summary: create a new IOU to pay the named payee
-      operationId: createIouGen
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/amount'
-        - $ref: '#/components/parameters/payee'
-      responses:
-        201:
-          description: The IOU is successfully created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/iou'
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
-
-  /gen/iou/{iouId}/amountOwed:
-    get:
-      summary: get the amount owed
-      operationId: getAmountOwedGen
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/iouId'
-      responses:
-        200:
-          $ref: '#/components/responses/amount200'
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
-
-  /gen/iou/{iouId}/pay/{amount}:
-    patch:
-      summary: pay an amount off
-      operationId: payGen
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/iouId'
-        - $ref: '#/components/parameters/amount'
-      responses:
-        200:
-          $ref: '#/components/responses/amount200'
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
-
-  /gen/iou/{iouId}/forgive:
-    put:
-      summary: forgive the whole debt
-      operationId: forgiveGen
-      tags:
-        - IOU
-      parameters:
-        - $ref: '#/components/parameters/iouId'
-      responses:
-        204:
-          description: debt forgiven
-        400:
-          $ref: '#/components/responses/400'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-        401:
-          $ref: '#/components/responses/oauth401'
-        500:
-          $ref: '#/components/responses/oauth500'
